--- a/project02/project2.ipynb
+++ b/project02/project2.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy.misc as sc\n",
+    "from scipy import misc as sc\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -76,9 +76,6 @@
     "    def __init__(self):\n",
     "        # relate numbers (1, -1, 0) to symbols ('x', 'o', ' ')\n",
     "        self.symbols = {1: 'x', -1: 'o', 0: ' '}\n",
-    "        self.result = []\n",
-    "        # x_board and o_board hold the win information after 1000 runs\n",
-    "        self.x_board, self.o_board = np.zeros((3, 3), dtype=float), np.zeros((3, 3), dtype=float)\n",
     "        # hold all the three in a line information\n",
     "        self.Three_in_a_Row = np.array([[0, 1, 2], [3, 4, 5], [6, 7, 8],\n",
     "                                        [0, 3, 6], [1, 4, 7], [2, 5, 8],\n",
@@ -88,8 +85,6 @@
     "                                [10, 0, 0, 0],\n",
     "                                [100, 0, 0, 0],\n",
     "                                [1000, 0, 0, 0]]\n",
-    "        self.nodeDict, self.succDict = {}, {}\n",
-    "        self.strategy = ''\n",
     "\n",
     "    def move_still_possible(self, S):\n",
     "        return not (S[S == 0].size == 0)\n",
@@ -216,30 +211,47 @@
     "        f.write('Number of x: ' + str(self.players.count(1)) + '\\n')\n",
     "        f.write('Number of o: ' + str(self.players.count(-1)) + '\\n')\n",
     "        mmv = self.max_node_util(node)\n",
-    "        f.write(str(self.nodeSuccDict))\n",
+    "        branches = dict([(key, []) for key in range(0, 10)])\n",
+    "        for key, value in self.nodeSuccDict.iteritems():\n",
+    "            branches[np.count_nonzero(value)].extend(value)\n",
+    "        sum_ = 0\n",
+    "        for key in sorted(branches.keys(), reverse=True):\n",
+    "            sum_ += len(branches[key])\n",
+    "            f.write('Number of nodes in branch %i: %i\\n' % (10 - key, len(branches[key])))\n",
+    "        f.write('Average number of branch nodes: %i\\n' %  np.divide(sum_, 9))\n",
+    "        print 'Done\\n'\n",
     "        return next(self.nodeDict[succ] for succ in self.nodeSuccDict[node] if self.nodeMinMaxDict[succ] is mmv)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "\"\\nttt = TicTacToe()\\nstate = np.array([\\n    [0, 0, 0],\\n    [0, 0, 0],\\n    [0, 0, 0]\\n])\\nplayer = -1\\nlevel = np.inf\\nminmax = MinMax(ttt, 'ttt', player, level, state)\\nminmax.run_min_max()\\n\""
+       "array([[0, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 0]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
     "ttt = TicTacToe()\n",
     "state = np.array([\n",
     "    [0, 0, 0],\n",
@@ -247,10 +259,9 @@
     "    [0, 0, 0]\n",
     "])\n",
     "player = -1\n",
-    "level = np.inf\n",
+    "level = 3\n",
     "minmax = MinMax(ttt, 'ttt', player, level, state)\n",
-    "minmax.run_min_max()\n",
-    "'''"
+    "minmax.run_min_max()\n"
    ]
   },
   {
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
