better alternative consideration

--- a/project02/project2.ipynb
+++ b/project02/project2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 01"
+    "# Project 02"
    ]
   },
   {
@@ -275,9 +275,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -285,15 +286,21 @@
      "output_type": "stream",
      "text": [
       "----\n",
-      "10\n",
+      "6\n",
       "----\n"
      ]
     }
    ],
    "source": [
+    "'''\n",
     "nodeDict = {0, 1 ,2 ,3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}\n",
     "nodeSuccDict = {0: [1, 2, 3, 4, 5], 1: [6, 7, 8, 9], 2: [10, 11], 3: [12, 13], 4: [14, 15, 16], 5: [17, 18, 19]}\n",
     "nodeUtilDict = {6: 15, 7: 20, 8: 1, 9: 3, 10: 3, 11: 4, 12: 15, 13: 10, 14: 16, 15: 4, 16: 12, 17: 15, 18: 12, 19: 8}\n",
+    "nodeMinMaxDict = {}\n",
+    "'''\n",
+    "nodeDict = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16}\n",
+    "nodeSuccDict = {0: [1, 2, 3, 4], 1: [5, 6, 7, 8, 9], 2: [10, 11], 3: [12, 13, 14], 4: [15, 16]}\n",
+    "nodeUtilDict = {5: 18, 6: 6, 7: 16, 8: 6, 9: 5, 10: 7, 11: 1, 12: 16, 13: 16, 14: 5, 15: 10, 16: 2}\n",
     "nodeMinMaxDict = {}\n",
     "\n",
     "def maxNodeUtil(node):\n",
@@ -301,8 +308,20 @@
     "            nodeMinMaxDict[node] = nodeUtilDict[node]\n",
     "            return nodeMinMaxDict[node]\n",
     "    mmv = -np.inf\n",
+    "    mmv_max = []\n",
     "    for s in nodeSuccDict[node]:\n",
-    "            mmv = max(mmv, minNodeUtil(s))\n",
+    "            mmv = max(mmv, minNodeUtil(s)[0])\n",
+    "            mmv_max.append(minNodeUtil(s)[0])\n",
+    "    mmv_max_arr = np.array(mmv_max)\n",
+    "    indices = np.flatnonzero((mmv_max_arr > mmv - 1) & (mmv_max_arr < mmv + 1))  # get the indices of value mmv in all max values\n",
+    "    if len(indices) > 1:  # if we have more than one value with value mmv, check which one is a better alternative\n",
+    "        max_, index = -np.inf, -1\n",
+    "        for i in indices: \n",
+    "            if nodeMinMaxDict[nodeSuccDict[node][i]][1] > max_:\n",
+    "                max_ = nodeMinMaxDict[nodeSuccDict[node][i]][1]\n",
+    "                ind = i\n",
+    "        nodeMinMaxDict[nodeSuccDict[node][ind]][0] += 1  # increase the value for a better alternative\n",
+    "        mmv = nodeMinMaxDict[nodeSuccDict[node][ind]][0]\n",
     "    nodeMinMaxDict[node] = mmv\n",
     "    return mmv\n",
     "\n",
@@ -310,16 +329,30 @@
     "    if node in nodeUtilDict:\n",
     "            nodeMinMaxDict[node] = nodeUtilDict[node]\n",
     "            return nodeMinMaxDict[node]\n",
-    "    mmv = np.inf\n",
+    "    mmv_min, mmv_max = np.inf, -np.inf\n",
     "    for s in nodeSuccDict[node]:\n",
-    "            mmv = min(mmv, maxNodeUtil(s))\n",
-    "    nodeMinMaxDict[node] = mmv\n",
-    "    return mmv\n",
+    "            mmv_min = min(mmv_min, maxNodeUtil(s))\n",
+    "            mmv_max = max(mmv_max, maxNodeUtil(s))\n",
+    "    nodeMinMaxDict[node] = [mmv_min, mmv_max]\n",
+    "    return [mmv_min, mmv_max]\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    print \"----\"\n",
     "    print maxNodeUtil(0)\n",
     "    print \"----\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "The above code works for the two trees in task 2.2.\n",
+    "\n",
+    "The algorithm will add 1 to the candidates which is a better alternative (like, 18 rather 16).\n",
+    "\n",
+    "I think this approach will have some benefits when our opponent is not play optimal, but when our opponent is palying optimize, this does't not matter."
    ]
   },
   {
