--- a/project02/project2.ipynb
+++ b/project02/project2.ipynb
@@ -348,6 +348,8 @@
     "collapsed": true
    },
    "source": [
+    "#### Answer\n",
+    "\n",
     "The above code works for the two trees in task 2.2.\n",
     "\n",
     "The algorithm will add 1 to the candidates which is a better alternative (like, 18 rather 16).\n",
