--- a/project02/project2.ipynb
+++ b/project02/project2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -24,6 +24,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy import misc as sc\n",
+    "from scipy.special import binom\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -34,13 +35,14 @@
     "### Task 2.1\n",
     "##### 1. upper bound for the number of nodes in the complete tic tact toe game tree (starting with an empty board and player X to move)\n",
     "\n",
+    "1).\n",
     "$$ supper \\, upper \\, bound = \\sum_{i=1}^{9} \\prod_{j=i}^{9} {j \\choose 1} $$\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -49,23 +51,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Supper upper bound is: 109601\n"
+      "Supper upper bound is: 986409.0\n"
      ]
     }
    ],
    "source": [
     "sum = 0\n",
-    "for i in range(0, 10):\n",
+    "for i in range(1, 10):\n",
     "    product = 1\n",
-    "    for j in range(i, 9):\n",
-    "        product *= sc.comb(j, 1, True)\n",
+    "    for j in range(i, 10):\n",
+    "        product *= binom(j, 1)\n",
+    "    sum += product\n",
+    "print 'Supper upper bound is: ' + str(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2). We can see from 5 occupied position on the board, there are three row/col/diag for 'x', then 6 for 'o', and so on.\n",
+    "This means we can substract at least 8 leafs from 5 when we are going to calculate for 6, of course, we did not consider the duplicated node still yet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Supper upper bound is: 986089.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for i in reversed([x for x in range(1, 10)]):\n",
+    "    product = 1\n",
+    "    for j in reversed(range(i, 10)):\n",
+    "        if i < 5 and j == i + 1:\n",
+    "            product -= 8\n",
+    "            product *= binom(j, 1)\n",
+    "        else:\n",
+    "            product *= binom(j, 1)\n",
     "    sum += product\n",
     "print 'Supper upper bound is: ' + str(sum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -225,33 +264,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0],\n",
-       "       [0, 1, 0],\n",
-       "       [0, 0, 0]])"
+       "\"\\nttt = TicTacToe()\\nstate = np.array([\\n    [0, 0, 0],\\n    [0, 0, 0],\\n    [0, 0, 0]\\n])\\nplayer = -1\\nlevel = 3\\nminmax = MinMax(ttt, 'ttt', player, level, state)\\nminmax.run_min_max()\\n\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
     "ttt = TicTacToe()\n",
     "state = np.array([\n",
     "    [0, 0, 0],\n",
@@ -261,7 +291,8 @@
     "player = -1\n",
     "level = 3\n",
     "minmax = MinMax(ttt, 'ttt', player, level, state)\n",
-    "minmax.run_min_max()\n"
+    "minmax.run_min_max()\n",
+    "'''\n"
    ]
   },
   {
