notebook format correct

--- a/project02/project2.ipynb
+++ b/project02/project2.ipynb
@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "from scipy import misc as sc\n",
     "from scipy.special import binom\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import sys\n",
     "import heapq\n",
